Move display logic into template.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,42 +5,62 @@
   </head>
 
   <body>
-	<h1 id=title>Indel Mapper</h1>
+	<div class="container">
 
-	{% with flashes = get_flashed_messages() %}
-    {% if flashes %}
-    <div class=flashes>
+	  <div class="banner">
+		<h1 id=title>Indel Mapper</h1>
+	  </div>
+
+	  {% with flashes = get_flashed_messages() %}
+      {% if flashes %}
+      <div class=flashes>
         <ul>
-            {% for f in flashes %}
-            <li>{{ f }}</li>
-            {% endfor %}
+          {% for f in flashes %}
+          <li>{{ f }}</li>
+          {% endfor %}
         </ul>
-    </div>
-    {% endif %}
-    {% endwith %}
+      </div>
+      {% endif %}
+      {% endwith %}
 
-    {% block body %}
-    {% endblock body %}
+      {% block body %}
+      {% endblock body %}
 
-	<form method="POST" enctype="multipart/form-data">
+	  <form method="POST" enctype="multipart/form-data">
 
-	  <div>
-		<label for="alignment">Alignment SAM File</label>
+		<div>
+		  <label for="alignment">Alignment SAM File</label>
+		</div>
+		<input name="alignment" type="file">
+
+		<div>
+		  <label for="reference">Reference CSV File</label>
+		</div>
+		<input name="reference" type="file">
+
+		<div>
+		  <input type="submit" value="Submit">
+		</div>
+	  </form>
+
+	  <div class="result-container">
+		{% for reference_presenter in results %}
+		<h2 class="reference-result">{{ reference_presenter.name() }}</h2>
+		<p>Sequence: {{ reference_presenter.sequence() }}</p>
+		<p>N20: {{reference_presenter.n20() }}</p>
+		<p>PAM: {{reference_presenter.pam() }}</p>
+		{% for tally in reference_presenter.tallies %}
+		<div class="read-reference-result">
+		  <p>Read Names: {{ tally.read_names_as_string() }}</p>
+		  <p>Count: {{ tally.count() }}</p>
+		  <p>Ref : {{ tally.reference_sequence_presentation }}</p>
+		  <p>Read: {{ tally.read_sequence_presentation }}</p>
+		</div>
+		{% endfor %}
+		{% endfor %}
 	  </div>
-	  <input name="alignment" type="file">
 
-	  <div>
-		<label for="reference">Reference CSV File</label>
-	  </div>
-	  <input name="reference" type="file">
-
-	  <input type="submit" value="Submit">
-	</form>
-
-	{% for result in results %}
-	<p>{{ result }}</p>
-	{% endfor %}
-
+	</div>
   </body>
 
 </html>
