--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
 	<title>Indel Mapper</title>
+	<link rel=stylesheet href="{{ url_for('static', filename='style.css') }}">
   </head>
 
   <body>
@@ -30,13 +31,13 @@
 
 		<div>
 		  <label for="alignment">Alignment SAM File</label>
+		  <input name="alignment" type="file">
 		</div>
-		<input name="alignment" type="file">
 
 		<div>
 		  <label for="reference">Reference CSV File</label>
+		  <input name="reference" type="file">
 		</div>
-		<input name="reference" type="file">
 
 		<div>
 		  <input type="submit" value="Submit">
@@ -51,10 +52,14 @@
 		<p>PAM: {{reference_presenter.pam() }}</p>
 		{% for tally in reference_presenter.tallies %}
 		<div class="read-reference-result">
-		  <p>Read Names: {{ tally.read_names_as_string() }}</p>
+		  <p>Cutsite Region: {{ tally.cutsite_region_representation }}</p>
 		  <p>Count: {{ tally.count() }}</p>
-		  <p>Ref : {{ tally.reference_sequence_presentation }}</p>
-		  <p>Read: {{ tally.read_sequence_presentation }}</p>
+		  {% for sequence in tally.presentations %}
+		  <div class="sequence">
+		  <p>Ref : {{ sequence.reference_sequence_presentation }}</p>
+		  <p>Read: {{ sequence.read_sequence_presentation }}</p>
+		  </div>
+		  {% endfor %}
 		</div>
 		{% endfor %}
 		{% endfor %}
