Make results collapsible/expandable
Having all the results together in a big list is pretty hard to browse.
This makes each section of results collapsible using a jQuery UI
accordion.

* Add a dependency on jQuery UI.
* Clean up some unnecessary markup and tweak CSS.

Fixes issue #12.

--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,8 @@
-body {
+.sequence {
 	font-family: Courier;
 }
 
-.reference-sequence {
-	font-size: 10px;
-}
-
-.sequence {
+.tiny-text {
 	font-size: 10px;
 }
 
