Limit the size of upload to the server.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         <div>
           <label for="alignment">Alignment SAM File</label>
           <input name="alignment" type="file">
-          <p> The alignment SAM file is the output of bowtie2 alignment. <p>
+          <p> The alignment SAM file is the output of bowtie2 alignment. (Max size 16MB) <p>
         </div>
 
         <div>
