Rename classes for better clarity.

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,10 +66,10 @@
         <p>PAM: <span class="sequence">{{ reference_presenter.pam() }}</span></p>
 
         <div class="accordion">
-          {% for tally in reference_presenter.tallies %}
-            <h3>Cutsite: <span class="sequence">{{ tally.cutsite_region_representation }}</span> ({{ tally.count() }})</h3>
+          {% for cluster in reference_presenter.mutation_clusters %}
+            <h3>Cutsite: <span class="sequence">{{ cluster.cutsite_region }}</span> ({{ cluster.count() }})</h3>
             <div class="region-results">
-              {% for sequence in tally.presentations %}
+              {% for sequence in cluster.presentations %}
                 <div class="sequence tiny-text">
                   <p>Ref : {{ sequence.reference_sequence_presentation }}</p>
                   <p>Read: {{ sequence.read_sequence_presentation }}</p>
