Replace AlignmentRepresentation with Alignment.
Refactor _realign into smaller methods.

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,8 @@
             <div class="region-results">
               {% for sequence in cluster.representations %}
                 <div class="sequence tiny-text">
-                  <p>Ref : {{ sequence.reference_representation }}</p>
-                  <p>Read: {{ sequence.read_representation }}</p>
+                  <p>Ref : {{ sequence.reference }}</p>
+                  <p>Read: {{ sequence.read }}</p>
                 </div>
               {% endfor %}
             </div>
