Integrate SequenceDiff to display description.
Now, the description will be shown on the page.

Also, add description to CSV export.

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,15 +60,20 @@
 		<p>Total Reads: <span>{{ reference_presenter.total_reads() }}</span></p>
         <div class="accordion">
           {% for cluster in reference_presenter.mutation_clusters %}
-            <h3>Cutsite: <span class="sequence">{{ cluster.cutsite_region }}</span> ({{ cluster.count() }})</h3>
-            <div class="region-results">
-              {% for sequence in cluster.representations %}
-                <div class="sequence tiny-text">
-                  <p>Ref : {{ sequence.reference }}</p>
-                  <p>Read: {{ sequence.read }}</p>
-                </div>
-              {% endfor %}
+          <h3>Cutsite: {{ cluster.description }} ----- ({{ cluster.count() }})
+            <span class="sequence tiny-text">
+              <p class="cluster_accordion" >{{ cluster.cas9_region.reference }}</p>
+              <p>{{ cluster.cas9_region.read }}</p>
+            </span>
+          </h3>
+          <div class="region-results">
+            {% for alignment in cluster.alignments %}
+            <div class="sequence tiny-text">
+               <p>Ref : {{ alignment.reference }}</p>
+               <p>Read: {{ alignment.read }}</p>
             </div>
+            {% endfor %}
+          </div>
           {% endfor %}
         </div>
       {% endfor %}
