--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
   </head>
 
   <body>
@@ -41,9 +41,7 @@
         <div>
           <label for="reference">Reference CSV File</label>
           <input name="reference" type="file">
-          <p> The reference CSV file should be formatted with name of the reference, reference sequence, n20, and pam.</p>
-          <p> It should not have headers. The pam should be NGG or CCN. </p>
-          <p>Example row: brc2,[reference sequence],[n20 sequence],NGG </p>
+          <p>The reference CSV file should contain name of the reference, reference sequence, n20, and pam.</p>
         </div>
 
         <div>
@@ -51,13 +49,26 @@
         </div>
       </form>
 
+      <hr></hr>
+
+      <div>
+        <h2>How should I format my CSV?</h2>
+        <p>The CSV should not have headers. In order, the columns should represent the name of the reference, reference sequence, n20, and pam. The pam should be 'NGG' or 'CCN'.</p>
+        <p>Example rows:</p>
+        <p class="sequence">gene1,TGGTTGGAACTCTTTCCCCGGGGAAAACGGTTT,CCCCGGGGAAAA,NGG</p>
+        <p class="sequence">gene2,AGTTCTCCTTTGAGCGTAGGCCGTATGTCC,TTGAGCGTAG,CCN</p>
+      </div>
+
+      <hr></hr>
+
       {% for reference_presenter in results %}
+      <div class="result">
         <h2>{{ reference_presenter.name() }}</h2>
 
         <p>Sequence: <span class="sequence tiny-text">{{ reference_presenter.sequence() }}</span></p>
         <p>N20: <span class="sequence">{{ reference_presenter.n20() }}</span></p>
         <p>PAM: <span class="sequence">{{ reference_presenter.pam() }}</span></p>
-		<p>Total Reads: <span>{{ reference_presenter.total_reads() }}</span></p>
+        <p>Total Reads: <span>{{ reference_presenter.total_reads() }}</span></p>
         <div class="accordion">
           {% for cluster in reference_presenter.mutation_clusters %}
           <h3>Cutsite: {{ cluster.description }} ----- ({{ cluster.count() }})
@@ -76,8 +87,12 @@
           </div>
           {% endfor %}
         </div>
+      </div>
       {% endfor %}
-	</div>
+    </div>
 
+    <footer>
+      <p>Indel Mapper is free software, licensed under the <a href="https://gnu.org/licenses/gpl.html">GPLv3</a>. The code is available on <a href="https://github.com/hrs/indel-mapper">GitHub</a>.</p>
+    </footer>
   </body>
 </html>
