Add link to download a CSV of results
This links to a CSV of the displayed results, which are hosted on S3.

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,10 @@
 
       <hr></hr>
 
+      {% if upload.succeeded %}
+        <p>[<a href="{{ upload.url }}">Download a CSV</a>]</p>
+      {% endif %}
+
       {% for reference_presenter in results %}
       <div class="result">
         <h2>{{ reference_presenter.name() }}</h2>
