--- a/templates/status.html
+++ b/templates/status.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="banner">
-        <h1 id=title>Indel Mapper</h1>
+        <h1 id=title><a href="/">Indel Mapper</a></h1>
       </div>
 
       <div class="flashes">
